2009-09-25  Noel O'Boyle  <baoilleach@gmail.com>

	Fixed some errors when compiling the GUI on Mac.

2009-09-25  Noel O'Boyle  <baoilleach@gmail.com>

	Fixed some warnings when compiling with Intel Compiler. 

2009-09-22  Noel O'Boyle  <baoilleach@gmail.com>

	* include/openbabel/format.h: Added include <typeinfo>. Now OB compiles
	using Intel Compiler.

2009-09-22  Noel O'Boyle  <baoilleach@gmail.com>

	* src/GUI/babel.xpm: Applied patch from Riccardo Vianello (r_vianello
	at SF) to avoid warnings when building on Linux

2009-09-21  Noel O'Boyle  <baoilleach@gmail.com>

	* scripts/*: Copied + pasted the scripts directory from 22x as a number
	of commits were never merged.

2009-09-20  Noel O'Boyle  <baoilleach@gmail.com>

	* scripts/CMakeLists.txt: Support for pybel. Revert regression that
	prevented linked against Python libraries.
	* include/openbabel/text.h: Add newline at end to avoid warning

2009-09-19  Noel O'Boyle  <baoilleach@gmail.com>

	Miscellaneous static_casts added and unused variables removed to get rid
	of warnings under MSVC

2009-09-18  Noel O'Boyle  <baoilleach@gmail.com>

	* include/openbabel/generic.h: Remove unused declarations that caused
	warnings under MSVC
	* test/obtest.h: Make compatible with MSVC
	* test/CMakeLists.txt: Build tests in the same location as the OB DLL
	(Windows only)
	* src/formats/CMakeLists.txt: Build obf files in same location as the
	OB DLL (Windows only)
	* CMakeLists.txt, CTestConfig.cmake: Option to submit tests to dashboard
	* windows-vc2008, *.bat: Tidy up batch files for building OB

2009-09-17  Noel O'Boyle  <baoilleach@gmail.com>

	* CMakeLists.txt, data/CMakeLists.txt: Tidy up the Windows build. The
	goal is to have CMake make something as close as possible to a
	distribution.

2009-09-17  Noel O'Boyle  <baoilleach@gmail.com>

	* include/stereo/stereo.h: Remove obsolete stereo functions and
	associated documentation
	* scripts/CMakeLists.txt: Add option PYTHON_PREFIX to allow the user